0030365: Create tool to compute deviation between any 2D-curve and some its segment

The tool, DRAW-command for its check and corresponding test cases have been created.

See documentation about new tool in GeomLib_Tool.hxx file.